components/timeline/styles.css
.timelineItem {
  position: relative;
  break-inside: avoid;
}

.timelineItem small {
  font-style: italic;
  font-size: 1rem;
}

.timelineItem p {
  margin-top: 1rem;
}

.timeLineItemContent {
  padding: var(--default-padding);
  margin: 0 0 var(--default-padding) calc(var(--default-padding) * 3);
  background: #fff;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 8px 0px;
  border-radius: 5px;
}

@media print {
  .timeLineItemContent {
    margin-left: calc(var(--default-padding) * 4);
  }
}

.timeLineItemContent h2 {
  line-height: 1;
  margin-bottom: 6px;
}

.timeLineItemDeco {
  position: absolute;
  left: 0;
  top: var(--default-padding);
  bottom: 0;
}

.timelineItem:last-child .timeLineItemDeco::after {
  content: none;
}

.timeLineItemDeco::before {
  content: '';
  position: absolute;
  top: 0;
  left: 2px;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background: #fff;
  border: #fff 3px solid;
  box-shadow: var(--primary-color) 0 0 0 2px;
}

.timeLineItemDeco::after {
  content: '';
  position: absolute;
  top: 18px;
  left: 11px;
  transform: translateX(-50%);
  bottom: calc(var(--default-padding) * -2);
  width: 2px;
  background: var(--primary-color);
}

